--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,30 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# GCP Service Account Credentials (CRITICAL - DO NOT COMMIT)
+auth.json
+
+# API Keys and Secrets
+.env
+
+# Jupyter Notebook checkpoints
+.ipynb_checkpoints/
+*/.ipynb_checkpoints/
+
+# Python cache
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Environment folders
+venv/
+env/
+.venv/
+
+# OS generated files
+.DS_Store
+.DS_Store?
+
+# Ignore generated output files
+output/
